--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "classnames": "^2.3.2"
+    "classnames": "^2.3.2",
+    "json-server": "^0.17.2"
   }
 }
